Add an initContainer in the falco daemonset
I cannot use one of the provided drivers and falco cannot compile in my
OS (flatcar) so i've built a container that explicitly have the needed
sources and build and drop the driver in the host in the right path.

That way in the falco chart i can set the FALCO_BPF_PROBE to that path
and use the falco-no-driver image to load it.

Note: If you don't want to build your own image for driver building
you can use driverkit and populate the config for your kernel version
and OS.

Signed-off-by: fsero <fabian.selles@adevinta.com>

--- a/falco/templates/daemonset.yaml
+++ b/falco/templates/daemonset.yaml
@@ -196,8 +196,12 @@ spec:
                   name: {{ template "falco.fullname" . }}
                   key: gcp-credentials-data
       {{- end }}
-      {{- if (or .Values.integrations.natsOutput.enabled .Values.integrations.snsOutput.enabled .Values.integrations.pubsubOutput.enabled) }}
+      {{- if (or .Values.integrations.natsOutput.enabled .Values.integrations.snsOutput.enabled .Values.integrations.pubsubOutput.enabled .Values.extraInitContainers) }}
       initContainers:
+          {{- if .Values.extraInitContainers }}
+{{ toYaml .Values.extraInitContainers | indent 12 }}
+          {{- end }}
+          {{- if (or .Values.integrations.natsOutput.enabled .Values.integrations.snsOutput.enabled .Values.integrations.pubsubOutput.enabled) }}
           - name: init-pipe
             image: busybox
             command: ['mkfifo','/tmp/shared-pipe/nats']
@@ -205,6 +209,7 @@ spec:
             - mountPath: /tmp/shared-pipe/
               name: shared-pipe
               readOnly: false
+          {{- end }}
       {{- end }}
       volumes:
         - name: dshm
