--- a/falco/values.yaml
+++ b/falco/values.yaml
@@ -1,4 +1,4 @@
-# Default values for falco.
+# Default values for Falco.
 
 image:
   registry: docker.io
@@ -127,7 +127,7 @@ falco:
 
   # Minimum log level to include in logs. Note: these levels are
   # separate from the priority field of rules. This refers only to the
-  # log level of falco's internal logging. Can be one of "emergency",
+  # log level of Falco's internal logging. Can be one of "emergency",
   # "alert", "critical", "error", "warning", "notice", "info", "debug".
   logLevel: info
 
@@ -142,13 +142,13 @@ falco:
   bufferedOutputs: false
 
   # Falco uses a shared buffer between the kernel and userspace to pass
-  # system call information. When falco detects that this buffer is
+  # system call information. When Falco detects that this buffer is
   # full and system calls have been dropped, it can take one or more of
   # the following actions:
   #   - "ignore": do nothing. If an empty list is provided, ignore is assumed.
   #   - "log": log a CRITICAL message noting that the buffer was full.
-  #   - "alert": emit a falco alert noting that the buffer was full.
-  #   - "exit": exit falco with a non-zero rc.
+  #   - "alert": emit a Falco alert noting that the buffer was full.
+  #   - "exit": exit Falco with a non-zero rc.
   #
   # The rate at which log/alert messages are emitted is governed by a
   # token bucket. The rate corresponds to one message every 30 seconds
@@ -161,13 +161,13 @@ falco:
     maxBurst: 10
 
   # A throttling mechanism implemented as a token bucket limits the
-  # rate of falco notifications. This throttling is controlled by the following configuration
+  # rate of Falco notifications. This throttling is controlled by the following configuration
   # options:
   #  - rate: the number of tokens (i.e. right to send a notification)
   #    gained per second. Defaults to 1.
   #  - max_burst: the maximum number of tokens outstanding. Defaults to 1000.
   #
-  # With these defaults, falco could send up to 1000 notifications after
+  # With these defaults, Falco could send up to 1000 notifications after
   # an initial quiet period, and then up to 1 notification per second
   # afterward. It would gain the full burst back after 1000 seconds of
   # no activity.
@@ -185,7 +185,7 @@ falco:
   # line. If keep_alive is set to false, the file will be re-opened
   # for each output message.
   #
-  # Also, the file will be closed and reopened if falco is signaled with
+  # Also, the file will be closed and reopened if Falco is signaled with
   # SIGUSR1.
   fileOutput:
     enabled: false
@@ -216,7 +216,7 @@ falco:
   # line. If keep_alive is set to false, the program will be re-spawned
   # for each output message.
   #
-  # Also, the program will be closed and reopened if falco is signaled with
+  # Also, the program will be closed and reopened if Falco is signaled with
   # SIGUSR1.
   programOutput:
     enabled: false
@@ -281,7 +281,7 @@ customRules: {}
   #   [ rule body ]
 
 integrations:
-  # If Google Cloud Security Command Center integration is enabled, falco will
+  # If Google Cloud Security Command Center integration is enabled, Falco will
   # be configured to use this integration as program_output and sets the following values:
   # * json_output: true
   # * program_output:
@@ -292,7 +292,7 @@ integrations:
     enabled: false
     webhookUrl: http://sysdig-gcscc-connector.default.svc.cluster.local:8080/events
     webhookAuthenticationToken: b27511f86e911f20b9e0f9c8104b4ec4
-  # If Nats Output integration is enabled, falco will be configured to use this
+  # If Nats Output integration is enabled, Falco will be configured to use this
   # integration as file_output and sets the following values:
   # * json_output: true
   # * json_include_output_property: true
@@ -303,7 +303,7 @@ integrations:
   natsOutput:
     enabled: false
     natsUrl: "nats://nats.nats-io.svc.cluster.local:4222"
-  # If SNS Output integration is enabled, falco will be configured to use this
+  # If SNS Output integration is enabled, Falco will be configured to use this
   # integration as file_output and sets the following values:
   # * json_output: true
   # * json_include_output_property: true
@@ -319,7 +319,7 @@ integrations:
     aws_default_region: ""
 
 
-  # If GCloud Pub/Sub integration is enabled, falco will be configured to use this
+  # If GCloud Pub/Sub integration is enabled, Falco will be configured to use this
   # integration as file_output and sets the following values:
   # * json_output: true
   # * json_include_output_property: true
@@ -334,7 +334,7 @@ integrations:
     projectID: ""
 
 
-# Allow falco to run on Kubernetes 1.6 masters.
+# Allow Falco to run on Kubernetes 1.6 masters.
 tolerations:
   - effect: NoSchedule
     key: node-role.kubernetes.io/master
@@ -343,5 +343,5 @@ scc:
   # true here enabled creation of Security Context Constraints in Openshift
   create: true
 
-# Add initContainers to falco pod
+# Add initContainers to Falco pod
 extraInitContainers: []
