Add priorityClassName to falco-exporter values
Signed-off-by: Bas van Baalen <bas.van.baalen@nn-group.com>

--- a/falco-exporter/values.yaml
+++ b/falco-exporter/values.yaml
@@ -22,6 +22,8 @@ imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
 
+priorityClassName:
+
 falco:
   grpcUnixSocketPath: "unix:///var/run/falco/falco.sock"
   grpcTimeout: 2m
