--- a/falco/templates/clusterrolebinding.yaml
+++ b/falco/templates/clusterrolebinding.yaml
@@ -1,6 +1,6 @@
 {{- if .Values.rbac.create }}
 kind: ClusterRoleBinding
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: {{ template "rbac.apiVersion" . }}
 metadata:
   name: {{ template "falco.fullname" .}}
   labels:
