Add SCC to support Openshift
Similar to https://github.com/falcosecurity/charts/pull/51, add SCC support for Openshift, required to mounth the grpc socket as hostPath

Signed-off-by: Alvaro Iradier <airadier@gmail.com>

--- a/falco-exporter/values.yaml
+++ b/falco-exporter/values.yaml
@@ -92,3 +92,7 @@ serviceMonitor:
 grafanaDashboard:
   enabled: false
   namespace: default
+
+scc:
+  # true here enabled creation of Security Context Constraints in Openshift
+  create: true
