--- a/falco-exporter/templates/service.yaml
+++ b/falco-exporter/templates/service.yaml
@@ -11,6 +11,7 @@ metadata:
 {{- if .Values.service.labels }}
 {{ toYaml .Values.service.labels | indent 4 }}
 {{- end }}
+  namespace: {{ .Release.Namespace }}
 spec:
 {{- if .Values.service.clusterIP }}
   clusterIP: {{ .Values.service.clusterIP }}
