--- a/falco-exporter/templates/podsecuritypolicy.yaml
+++ b/falco-exporter/templates/podsecuritypolicy.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.podSecurityPolicy.create -}}
+{{- if and .Values.podSecurityPolicy.create (.Capabilities.APIVersions.Has "policy/v1beta1") }}
 apiVersion: policy/v1beta1
 kind: PodSecurityPolicy
 metadata:
