Fixed ServiceAccount reference inside RoleBinding
Signed-off-by: Philip Schmid <pschmid2@puzzle.ch>

--- a/falco-exporter/templates/rolebinding.yaml
+++ b/falco-exporter/templates/rolebinding.yaml
@@ -12,7 +12,7 @@ metadata:
   namespace: {{ .Release.Namespace }}
 subjects:
 - kind: ServiceAccount
-  name: {{ include "falco-exporter.podSecurityPolicyName" . }}
+  name: {{ include "falco-exporter.serviceAccountName" . }}
 roleRef:
   kind: Role
   name: {{ include "falco-exporter.podSecurityPolicyName" . }}
