Replace extensions apiGroup/apiVersion because of deprecation
Deprecation Info:
https://kubernetes.io/blog/2019/07/18/api-deprecations-in-1-16/

Signed-off-by: Christian Zunker <christian.zunker@codecentric.cloud>

--- a/falco/templates/clusterrole.yaml
+++ b/falco/templates/clusterrole.yaml
@@ -45,7 +45,7 @@ rules:
       - get
 {{- if .Values.podSecurityPolicy.create }}
   - apiGroups:
-      - extensions
+      - policy
     resources:
       - podsecuritypolicies
     resourceNames:
