--- a/falco-exporter/templates/role.yaml
+++ b/falco-exporter/templates/role.yaml
@@ -12,7 +12,7 @@ metadata:
   namespace: {{ .Release.Namespace }}
 rules:
 - apiGroups:
-    - extensions
+    - policy
   resources:
     - podsecuritypolicies
   resourceNames:
