Add PSP support to fake event generator
Fixes #128

Signed-off-by: Christian Zunker <christian.zunker@codecentric.cloud>

--- a/falco/templates/clusterrole.yaml
+++ b/falco/templates/clusterrole.yaml
@@ -50,6 +50,9 @@ rules:
       - podsecuritypolicies
     resourceNames:
       - {{ template "falco.fullname" . }}
+{{- if .Values.fakeEventGenerator.enabled }}
+      - event-generator-{{ template "falco.fullname" . }}
+{{- end }}
     verbs:
       - use
 {{- end }}
