--- a/falco/templates/podsecuritypolicy.yaml
+++ b/falco/templates/podsecuritypolicy.yaml
@@ -1,4 +1,5 @@
 {{- if .Values.podSecurityPolicy.create}}
+---
 apiVersion: policy/v1beta1
 kind: PodSecurityPolicy
 metadata:
@@ -21,4 +22,31 @@ spec:
   supplementalGroups:
     rule: RunAsAny
   volumes: ['*']
+{{- end }}
+{{- if (and .Values.podSecurityPolicy.create .Values.fakeEventGenerator.enabled) }}
+---
+apiVersion: policy/v1beta1
+kind: PodSecurityPolicy
+metadata:
+  name: event-generator-{{ template "falco.fullname" . }}
+  labels:
+    app: {{ template "falco.fullname" . }}-event-generator
+    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    release: "{{ .Release.Name }}"
+    heritage: "{{ .Release.Service }}"
+spec:
+  privileged: false
+  hostNetwork: false
+  readOnlyRootFilesystem: true
+  requiredDropCapabilities:
+  - ALL
+  fsGroup:
+    rule: RunAsAny
+  runAsUser:
+    rule: RunAsAny
+  seLinux:
+    rule: RunAsAny
+  supplementalGroups:
+    rule: RunAsAny
+  volumes: []
 {{- end }}
