Update google chat secret
Signed-off-by: KeisukeYamashita <19yamashita15@gmail.com>

--- a/falcosidekick/templates/secrets.yaml
+++ b/falcosidekick/templates/secrets.yaml
@@ -45,3 +45,6 @@ data:
   {{- if .Values.config.gcp.credentials }}
   gcp-credentials: "{{ .Values.config.gcp.credentials | b64enc }}"
   {{- end }}
+  {{- if .Values.config.googlechat.webhookurl }}
+  google-chat-webhookurl: "{{ .Values.config.googlechat.webhookurl | b64enc }}"
+  {{- end }}
