Add value for google chat
Signed-off-by: KeisukeYamashita <19yamashita15@gmail.com>

--- a/falcosidekick/values.yaml
+++ b/falcosidekick/values.yaml
@@ -157,6 +157,12 @@ config:
       topic: "" # The name of the Pub/Sub topic
     # minimumpriority: "debug" # minimum priority of event for using this output, order is emergency|alert|critical|error|warning|notice|informational|debug or "" (default)
 
+  googlechat:
+    webhookurl: ""
+    outputformat: "all"
+    minimumpriority: ""
+    messageformat: ""
+
 service:
   type: ClusterIP
   port: 2801
