--- a/falcosidekick/templates/secrets.yaml
+++ b/falcosidekick/templates/secrets.yaml
@@ -42,3 +42,6 @@ data:
   {{- if .Values.config.discord.webhookurl }}
   discord-webhookurl: "{{ .Values.config.discord.webhookurl | b64enc }}"
   {{- end }}
+  {{- if .Values.config.gcp.credentials }}
+  gcp-credentials: "{{ .Values.config.gcp.credentials | b64enc }}"
+  {{- end }}
