--- a/falcosidekick/values.yaml
+++ b/falcosidekick/values.yaml
@@ -148,6 +148,13 @@ config:
     webhookurl: ""
     icon: ""
     minimumpriority: ""
+  
+  gcp:
+    credentials: "" # The base64-encoded JSON key file for the GCP service account
+    pubsub:
+      projectid: "" # The GCP Project ID containing the Pub/Sub Topic
+      topic: "" # The name of the Pub/Sub topic
+    # minimumpriority: "debug" # minimum priority of event for using this output, order is emergency|alert|critical|error|warning|notice|informational|debug or "" (default)
 
 service:
   type: ClusterIP
