Add webhook custom headers
Signed-off-by: KeisukeYamashita <19yamashita15@gmail.com>

--- a/falcosidekick/templates/deployment.yaml
+++ b/falcosidekick/templates/deployment.yaml
@@ -271,6 +271,8 @@ spec:
             {{- if .Values.config.webhook.address }}
             - name: WEBHOOK_ADDRESS
               value: {{ .Values.config.webhook.address | quote }}
+            - name: WEBHOOK_CUSTOMHEADERS
+              value: {{ .Values.config.webhook.customHeaders | quote }}
             - name: WEBHOOK_MINIMUMPRIORITY
               value: {{ .Values.config.webhook.minimumpriority | quote }}
             {{- end }}
