--- a/falcosidekick/templates/aadpodidentity.yaml
+++ b/falcosidekick/templates/aadpodidentity.yaml
@@ -3,6 +3,11 @@ apiVersion: "aadpodidentity.k8s.io/v1"
 kind: AzureIdentity
 metadata:
   name: falcosidekick
+  {{- if .Values.config.azure.eventHub.namespace }}
+  namespace: {{ .Values.config.azure.eventHub.namespace }}
+  {{- else }}
+  namespace: {{ .Release.Namespace }} 
+  {{- end}}
 spec:
   type: 0
   resourceID: /subscriptions/{{ .Values.config.azure.subscriptionID }}/resourcegroups/{{ .Values.config.azure.resourceGroupName }}/providers/Microsoft.ManagedIdentity/userAssignedIdentities/{{ .Values.config.azure.podIdentityName }}
