--- a/falcosidekick/templates/ingress.yaml
+++ b/falcosidekick/templates/ingress.yaml
@@ -4,6 +4,7 @@ apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   name: {{ $fullName }}
+  namespace: {{ .Release.Namespace }}
   labels:
     app.kubernetes.io/name: {{ include "falcosidekick.name" . }}
     helm.sh/chart: {{ include "falcosidekick.chart" . }}
