--- a/falcosidekick/templates/rbac.yaml
+++ b/falcosidekick/templates/rbac.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "falcosidekick.fullname" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     app.kubernetes.io/name: {{ include "falcosidekick.name" . }}
     helm.sh/chart: {{ include "falcosidekick.chart" . }}
@@ -12,6 +13,7 @@ apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: Role
 metadata:
   name: {{ include "falcosidekick.fullname" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     app.kubernetes.io/name: {{ include "falcosidekick.name" . }}
     helm.sh/chart: {{ include "falcosidekick.chart" . }}
@@ -31,6 +33,7 @@ apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: RoleBinding
 metadata:
   name: {{ include "falcosidekick.fullname" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     app.kubernetes.io/name: {{ include "falcosidekick.name" . }}
     helm.sh/chart: {{ include "falcosidekick.chart" . }}
