Support release namespace for falco-exporter
Signed-off-by: KeisukeYamashita <19yamashita15@gmail.com>

--- a/falco-exporter/templates/grafana-dashboard.yaml
+++ b/falco-exporter/templates/grafana-dashboard.yaml
@@ -289,5 +289,9 @@ metadata:
   labels:
     grafana_dashboard: "1"
   name: grafana-falco
+  {{- if .Values.grafanaDashboard.namespace }}
   namespace: {{ .Values.grafanaDashboard.namespace }}
+  {{- else }}
+  namespace: {{ .Release.Namespace }}
+  {{- end}}
 {{- end -}}
