--- a/falco-exporter/templates/server-secret-certs.yaml
+++ b/falco-exporter/templates/server-secret-certs.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ include "falco-exporter.fullname" . }}-server-certs
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "falco-exporter.labels" . | nindent 4 }}
 type: Opaque
