Add AWS cloudwatchlogs support
Signed-off-by: KeisukeYamashita <19yamashita15@gmail.com>

--- a/falcosidekick/values.yaml
+++ b/falcosidekick/values.yaml
@@ -96,6 +96,10 @@ config:
     accesskeyid: ""
     secretaccesskey: ""
     region : ""
+    cloudwatchlogs:
+      loggroup : ""
+      logstream : ""
+      minimumpriority: "" 
     lambda:
       functionname : ""
       minimumpriority: ""
