--- a/falcosidekick/templates/deployment.yaml
+++ b/falcosidekick/templates/deployment.yaml
@@ -206,6 +206,14 @@ spec:
             - name: AWS_LAMBDA_MINIMUMPRIORITY
               value: {{ .Values.config.aws.lambda.minimumpriority | quote }}
             {{- end }}
+            {{- if .Values.config.aws.cloudwatchlogs.logstream }}
+            - name: AWS_CLOUDWATCHLOGS_LOGGROUP
+              value: {{ .Values.config.aws.cloudwatchlogs.logstream | quote }}
+            - name: AWS_CLOUDWATCHLOGS_LOGSTREAM
+              value: {{ .Values.config.aws.cloudwatchlogs.logstream }}
+            - name: AWS_CLOUDWATCHLOGS_MINIMUMPRIORITY
+              value: {{ .Values.config.aws.cloudwatchlogs.minimumpriority | quote }}
+            {{- end }}
             {{- if .Values.config.aws.sns.topicarn }}
             - name: AWS_SNS_TOPICARN
               value: {{ .Values.config.aws.sns.topicarn | quote }}
