fix api deprecations
Signed-off-by: Carlos Panato <ctadeu@gmail.com>

--- a/falcosidekick/templates/rbac.yaml
+++ b/falcosidekick/templates/rbac.yaml
@@ -9,7 +9,7 @@ metadata:
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
 ---
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: {{ include "falcosidekick.fullname" . }}
@@ -29,7 +29,7 @@ rules:
   verbs:
     - get
 ---
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: {{ include "falcosidekick.fullname" . }}
