ci/tests: add job to test the charts
Signed-off-by: Carlos Panato <ctadeu@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,16 @@
 version: 2.1
 jobs:
+  lint-scripts:
+    docker:
+      - image: koalaman/shellcheck-alpine
+    steps:
+      - checkout
+      - run:
+          command: |
+            shellcheck -x tests/e2e-kind.sh
+            shellcheck -x .circleci/install_tools.sh
+            shellcheck -x .circleci/release.sh
+            shellcheck -x .circleci/lint.sh
   lint-charts:
     docker:
         - image: quay.io/helmpack/chart-testing:latest
@@ -8,6 +19,13 @@ jobs:
       - run:
           name: lint
           command: .circleci/lint.sh
+  install-charts:
+      machine: true
+      steps:
+        - checkout
+        - run:
+            command: tests/e2e-kind.sh
+            no_output_timeout: 1h
   release-charts:
     docker:
       - image: cimg/base:stable
@@ -29,7 +47,12 @@ workflows:
   version: 2
   release:
     jobs:
-      - "lint-charts"
+      - lint-scripts
+      - lint-charts
+      - install-charts:
+          requires:
+            - lint-scripts
+            - lint-charts
       - release-charts:
           context: falco
           filters:
