added existingsecret for gcp in values file
Signed-off-by: Chris Carty <chris.carty@gmail.com>

--- a/falcosidekick/values.yaml
+++ b/falcosidekick/values.yaml
@@ -151,6 +151,7 @@ config:
     minimumpriority: ""
   
   gcp:
+    existingcredentials: ""
     credentials: "" # The base64-encoded JSON key file for the GCP service account
     pubsub:
       projectid: "" # The GCP Project ID containing the Pub/Sub Topic
