added missing 'if'
Signed-off-by: Chris Carty <chris.carty@gmail.com>

--- a/falcosidekick/templates/deployment.yaml
+++ b/falcosidekick/templates/deployment.yaml
@@ -221,7 +221,7 @@ spec:
             - name: MATTERMOST_MESSAGEFORMAT
               value: {{ .Values.config.mattermost.messageformat | quote }}
             {{- end }}
-            {{- .Values.config.teams.existingsecret }}
+            {{- if .Values.config.teams.existingsecret }}
             - name: TEAMS_WEBHOOKURL
               valueFrom:
                 secretKeyRef:
