--- a/falcosidekick/templates/secrets.yaml
+++ b/falcosidekick/templates/secrets.yaml
@@ -147,4 +147,11 @@ data:
   KAFKA_TOPIC: "{{ .Values.config.kafka.topic | b64enc }}"
   KAFKA_PARTITION: "{{ .Values.config.kafka.partition | b64enc }}"
   KAFKA_MINIMUMPRIORITY: "{{ .Values.config.kafka.minimumpriority | b64enc }}"
+
+  # PagerDuty Output
+  PAGERDUTY_APIKEY: "{{ .Values.config.pagerduty.apikey | b64enc }}"
+  PAGERDUTY_SERVICE: "{{ .Values.config.pagerduty.service | b64enc }}"
+  PAGERDUTY_ASSIGNEE: "{{ .Values.config.pagerduty.assignee | b64enc }}"
+  PAGERDUTY_ESCALATION_POLICY: "{{ .Values.config.pagerduty.escalationpolicy | b64enc }}"
+  KAFKA_MINIMUMPRIORITY: "{{ .Values.config.pagerduty.minimumpriority | b64enc }}"
 {{- end }}
