Add pagerduty value
Signed-off-by: KeisukeYamashita <19yamashita15@gmail.com>

--- a/falcosidekick/values.yaml
+++ b/falcosidekick/values.yaml
@@ -183,6 +183,13 @@ config:
     messageformat: ""
     minimumpriority: ""
 
+  pagerduty:
+    apikey: ""
+    service: ""
+    assignee: ""
+    escalationpolicy: ""
+    minimumpriority: ""
+
 service:
   type: ClusterIP
   port: 2801
