fix(#109): grafana Dashboard
Signed-off-by: Toni Tauro <toni.tauro@adfinis.com>

--- a/falco-exporter/values.yaml
+++ b/falco-exporter/values.yaml
@@ -98,6 +98,7 @@ serviceMonitor:
 grafanaDashboard:
   enabled: false
   namespace: default
+  prometheusDatasourceName: Prometheus
 
 scc:
   # true here enabled creation of Security Context Constraints in Openshift
