--- a/falco-exporter/templates/grafana-dashboard.yaml
+++ b/falco-exporter/templates/grafana-dashboard.yaml
@@ -4,14 +4,6 @@ data:
   grafana-falco.json: |-
     {
         "__inputs": [
-          {
-            "name": "DS_PROMETHEUS",
-            "label": "Prometheus",
-            "description": "",
-            "type": "datasource",
-            "pluginId": "prometheus",
-            "pluginName": "{{ .Values.grafanaDashboard.source }}"
-          }
         ],
         "__requires": [
           {
@@ -63,7 +55,7 @@ data:
             "bars": false,
             "dashLength": 10,
             "dashes": false,
-            "datasource": "${DS_PROMETHEUS}",
+            "datasource": "$datasource",
             "description": "",
             "fill": 1,
             "fillGradient": 0,
@@ -152,7 +144,7 @@ data:
           },
           {
             "columns": [],
-            "datasource": "${DS_PROMETHEUS}",
+            "datasource": "$datasource",
             "fontSize": "100%",
             "gridPos": {
               "h": 10,
@@ -274,6 +266,28 @@ data:
         "tags": [],
         "templating": {
           "list": []
+        },
+        "templating": {
+           "list": [
+             {
+               "current": {
+                 "selected": false,
+                 "text": "{{ .Values.grafanaDashboard.prometheusDatasourceName }}",
+                 "value": "{{ .Values.grafanaDashboard.prometheusDatasourceName }}"
+               },
+               "hide": 0,
+               "includeAll": false,
+               "label": null,
+               "multi": false,
+               "name": "datasource",
+               "options": [],
+               "query": "prometheus",
+               "refresh": 1,
+               "regex": "",
+               "skipUrlSync": false,
+               "type": "datasource"
+             }
+           ]
         },
         "time": {
           "from": "now-6h",
