add kubeless output
Signed-off-by: Issif <issif_github@gadz.org>

--- a/falcosidekick/templates/secrets.yaml
+++ b/falcosidekick/templates/secrets.yaml
@@ -154,4 +154,10 @@ data:
   PAGERDUTY_ASSIGNEE: "{{ .Values.config.pagerduty.assignee | b64enc }}"
   PAGERDUTY_ESCALATION_POLICY: "{{ .Values.config.pagerduty.escalationpolicy | b64enc }}"
   PAGERDUTY_MINIMUMPRIORITY: "{{ .Values.config.pagerduty.minimumpriority | b64enc }}"
+  
+  # Kubeless Output
+  KUBELESS_FUNCTION: "{{ .Values.config.kubeless.function | b64enc }}"
+  KUBELESS_NAMESPACE: "{{ .Values.config.kubeless.namespace | b64enc }}"
+  KUBELESS_PORT: "{{ .Values.config.kubeless.port | toString | b64enc }}"
+  KUBELESS_MINIMUMPRIORITY: "{{ .Values.config.kubeless.minimumpriority | b64enc }}"
 {{- end }}
