--- a/falco/values.yaml
+++ b/falco/values.yaml
@@ -106,6 +106,7 @@ falco:
     - /etc/falco/falco_rules.local.yaml
     - /etc/falco/k8s_audit_rules.yaml
     - /etc/falco/rules.d
+  # - /etc/falco/rules.optional.d
 
   # If true, the times displayed in log messages and output messages
   # will be in ISO 8601. By default, times are displayed in the local
@@ -272,7 +273,8 @@ falco:
   grpcOutput:
     enabled: false
 
-customRules: {}
+customRules:
+  {}
   # Although Falco comes with a nice default rule set for detecting weird
   # behavior in containers, our users are going to customize the run-time
   # security rule sets or policies for the specific container images and
@@ -321,7 +323,6 @@ integrations:
     aws_secret_access_key: ""
     aws_default_region: ""
 
-
   # If GCloud Pub/Sub integration is enabled, Falco will be configured to use this
   # integration as file_output and sets the following values:
   # * json_output: true
@@ -336,7 +337,6 @@ integrations:
     credentialsData: ""
     projectID: ""
 
-
 # certificates used by webserver and grpc server
 # paste certificate content or use helm with --set-file
 certs:
@@ -345,7 +345,6 @@ certs:
     crt: ""
   ca:
     crt: ""
-
 
 # Allow Falco to run on Kubernetes 1.6 masters.
 tolerations:
@@ -358,3 +357,18 @@ scc:
 
 # Add initContainers to Falco pod
 extraInitContainers: []
+
+# Add extra volumes to Falco daemonset
+extraVolumes: []
+# - name: optional-rules-volume
+#   configMap:
+#     name: falco-rules-optional
+#     optional: true
+#     items:
+#       - key: falco_rules.optional.yaml
+#         path: falco_rules.optional.yaml
+
+# Add extra volumeMounts to Falco container in Falco daemonset
+extraVolumeMounts: []
+# - mountPath: /etc/falco/rules.optional.d
+#   name: optional-rules-volume
