--- a/falco/Chart.yaml
+++ b/falco/Chart.yaml
@@ -1,6 +1,6 @@
-apiVersion: v1
+apiVersion: v2
 name: falco
-version: 1.6.0
+version: 1.6.1
 appVersion: 0.26.2
 description: Falco
 keywords:
@@ -17,3 +17,9 @@ sources:
 maintainers:
   - name: The Falco Authors
     email: cncf-falco-dev@lists.cncf.io
+dependencies:
+  - alias: falcosidekick
+    name: falcosidekick
+    version: 0.2.2
+    condition: falcosidekick.enabled
+    repository: https://falcosecurity.github.io/charts
